# block-game

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  rust.yml  windows.yml
models/: skybox.mtl
shaders/: basic-frag.glsl  basic-vert.glsl  cloud-frag.glsl  sky-frag.glsl
src/: blockbuilder.rs  camera.rs  cube.rs  game.rs  main.rs  meshbuilder.rs  models.rs  shaders.rs  textures.rs  transform.rs
textures/: texture_atlas.aseprite
